update: manager-parser communication through REST API